# hog-moduleur

./: .gitignore  .gitmodules  README.md
00-eurorack-frame/: README.md
01-psu/: README.md  psu.kicad_pcb  psu.kicad_prl  psu.kicad_pro  psu.kicad_sch
01-psu/electronics/: psu.kicad_pcb
01-psu/electronics/v0.2/: psu.kicad_pcb  psu.kicad_pro  psu.kicad_sch
01-psu/eurorack/: fp-info-cache  psu.kicad_pcb  psu.kicad_prl  psu.kicad_pro  psu.kicad_sch
02-vco/: README.md
02-vco/electronics/core/: vco-core.kicad_pcb  vco-core.kicad_prl  vco-core.kicad_pro  vco-core.kicad_sch
02-vco/electronics/core-2layer/: vco-core.kicad_pcb  vco-core.kicad_pro  vco-core.kicad_sch  ~vco-core.kicad_sch.lck
02-vco/electronics/core-4layer/: vco-core.kicad_pcb  vco-core.kicad_pro
02-vco/electronics/ui-free-tuning/: vco-ui.kicad_pcb  vco-ui.kicad_sch
03-mixer/simulations/: 02-sidechain-compressor
03-sidechain-mixer/: README.md
03-sidechain-mixer/simulations/: 04-negative-comparator-with-gain
04-vcf/: README.md
06-utils-output/simulations/: 03-output-mixer-with-diode-clipper  05-headphones-amp
07-brain/brain-sdk/: .clang-format  AGENTS.md  CMakeLists.txt  README.md
07-brain/brain-sdk/lib/brain-io/: CMakeLists.txt  audio-cv-out.cpp  brain-io.h  button.cc  midi-parser.cpp  midi_parser.cpp  pulse.cpp
07-brain/brain-sdk/lib/brain-io/include/brain-io/: audio-cv-out.h  button.h  midi_parser.h  pulse.h
07-brain/brain-sdk/lib/brain-ui/: CMakeLists.txt  button.cc  button.cpp  led.cpp  pot-multiplexer.cpp  pot.cc  pot.cpp  pot_multiplexer.cpp
07-brain/brain-sdk/lib/brain-ui/include/brain-ui/: button.h  led.h  pot.h  pot_multiplexer.h
07-brain/brain-sdk/programs/hardware-test/: CMakeLists.txt  audio_cv_out_test.cpp  button_test.cpp  button_test.h  led_test.cpp  led_test.h  main.cpp  midi_test.cpp  potmux_test.cpp  potmux_test.h  pulse_test.cpp  settings.h
07-brain/context/: hog-moduleur-brain-module-overview.md
07-brain/simulations/: 01-pico-input-interface
08-default-patch/: default-patch.kicad_prl  default-patch.kicad_pro
lib/components/: Shmoergh-Custom-Components.kicad_sym
(+222 files in other folders)
